--- a/app/views/app_upload.jade
+++ b/app/views/app_upload.jade
@@ -14,13 +14,11 @@ html(lang='en')
             a.navbar-item.navbar-item-right(href='/app/upload') Upload
             a.navbar-item.navbar-item-right(href='/app/manage') Manage
             a.navbar-item.navbar-item-right(href='/app/register') Register
-        form.form(action='/app/upload' method='post')
-            h3.form-title Upload DNA Sequence
-            input.form-input#dna-owner-id(type='text' name='dna_owner_id' placeholder='dna_owner_id' required='')
-            textarea.form-input#dna-owner-data(type='text' name='dna_owner_data' placeholder='dna_owner_data' rows="4")
-            input.form-input#dna-owner-data-file(type='file' name='dna_owner_data_file' placeholder='dna_owner_data_file' required='')
-            button.form-button.form-button-color(type='button' name='upload_file' value='upload_file' onclick='readDnaDataFile();') upload file
-            input.form-button.form-button-color(type='submit' name='upload' value='upload' onclick='return true;')
+        form.form
+            h3.form-title Upload DNA Sequences
+            input.form-input#id(type='text' name='id' placeholder='id' required='')
+            input.form-input#file(type='file' name='file' placeholder='file' required='')
+            button.form-button.form-button-color(type='button' onclick='upload();') upload
         br
         br
         br
