--- a/app/public/stylesheets/form.css
+++ b/app/public/stylesheets/form.css
@@ -29,8 +29,9 @@
     padding: 10px;
     margin: 10px 0;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
+    transition: background-color 0.1s ease;
 }
 
 .form-button-color {
