--- a/app/views/app_index.jade
+++ b/app/views/app_index.jade
@@ -5,10 +5,10 @@ html(lang='en')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
         link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
-        title PPDNASSP
+        title DNA-SHARING-CHAIN
     body
         div.navbar
-            a.navbar-item.navbar-item-left(href='/app') PPDNASSP
+            a.navbar-item.navbar-item-left(href='/app') DNA-SHARING-CHAIN
             a.navbar-item.navbar-item-right(href='/app/download') Download
             a.navbar-item.navbar-item-right(href='/app/upload') Upload
             a.navbar-item.navbar-item-right(href='/app/manage') Manage
