--- a/app/views/app_register.jade
+++ b/app/views/app_register.jade
@@ -6,10 +6,10 @@ html(lang='en')
         link(rel='stylesheet' type='text/css' href='../stylesheets/body.css')
         link(rel='stylesheet' type='text/css' href='../stylesheets/navbar.css')
         link(rel='stylesheet' type='text/css' href='../stylesheets/form.css')
-        title PPDNASSP
+        title DNA-SHARING-CHAIN
     body
         div.navbar
-            a.navbar-item.navbar-item-left(href='/app/index') PPDNASSP
+            a.navbar-item.navbar-item-left(href='/app/index') DNA-SHARING-CHAIN
             a.navbar-item.navbar-item-right(href='/app/download') Download
             a.navbar-item.navbar-item-right(href='/app/upload') Upload
             a.navbar-item.navbar-item-right(href='/app/manage') Manage
@@ -21,7 +21,7 @@ html(lang='en')
                 option(value='patient') Patient 
                 option(value='research_institute') Research Institute
             input.form-input#address(type='text' name='address' placeholder='address' hidden readonly='')
-            input.form-input#message(type='text' name='message' placeholder='message' value='APP_REGISTER' readonly='')
+            input.form-input#message(type='text' name='message' placeholder='message' value='APP_REGISTER' hidden readonly='')
             input.form-input#signature(type='text' name='signature' placeholder='signature' required readonly='')
             button.form-button.form-metamask-button-color(type='button' onclick='getSignature();') sign 
             br
