--- a/app/views/did_register.jade
+++ b/app/views/did_register.jade
@@ -13,12 +13,12 @@ html(lang='en')
             a.navbar-item.navbar-item-right(href='/did/manage') Manage
             a.navbar-item.navbar-item-right(href='/did/register') Register
         form.form(action='/did/register' method='post')
-            h3.form-title Register a New Identity
+            h3.form-title Register Decentralized Identity
             select.form-select#type(name='type')
                 option(value='0') -- Please Select a Type --
                 option(value='1') Person 
                 option(value='2') Organization
-            input.form-input#id(type='text' name='id' placeholder='id number / organization number' required='')
+            input.form-input#id(type='text' name='id' placeholder='id_num / org_num' required='')
             input.form-input#address(type='text' name='address' placeholder='address' required='' readonly='')
             button.form-button.form-metamask-button-color(type='button' onclick='getAddress();') get metamask account
             button.form-button.form-button-color(type='button' onclick='register();') register
