--- a/app/views/app_manage.jade
+++ b/app/views/app_manage.jade
@@ -31,7 +31,7 @@ html(lang='en')
             br
             input.form-input#address(type='text' name='address' placeholder='address' hidden='')
             input.form-input#permission(type='text' name='permission' placeholder='permission' hidden='')
-            button.form-button.form-button-color(type='button' name='update' value='update permission' onclick='updatePermission(); return false;') update permission
+            button.form-button.form-button-color(type='button' name='update' value='update' onclick='updateAccessLevelList(); return false;') update
         br
         br
         br
