--- a/app/views/app_upload.jade
+++ b/app/views/app_upload.jade
@@ -20,7 +20,7 @@ html(lang='en')
             input.form-input#tags(type='text', name='tags' placeholder='tags')
             
             input.form-input#file(type='file' name='file' placeholder='file' required='')
-            button.form-button.form-button-color(type='button' onclick='upload();') upload
+            button.form-button.form-button-color(type='button' onclick='uploadDnaSequences();') upload
         form.form
             h3.form-title Upload Access Tickets
             input.form-input#id2(type='text' name='id' placeholder='id' required='')
