--- a/app/views/did_manage.jade
+++ b/app/views/did_manage.jade
@@ -15,7 +15,7 @@ html(lang='en')
         form.form
             h3.form-title Decentralized Identity Infos
             input.form-input#identity-info-type(type='text' name='type' placeholder='type' required='' readonly='')
-            input.form-input#identity-info-id(type='text' name='id' placeholder='id_num / org_num' required='' readonly='')
+            input.form-input#identity-info-id(type='text' name='id' placeholder='unique id' required='' readonly='')
             input.form-input#identity-info-identity-contract-address(type='text' name='identity-contract-address' placeholder='identity_contract_address' required='' readonly='')
             button.form-button.form-button-color(type='button' onclick='getInfos();') show
         form.form
